--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2>自己紹介</h2>
                 <p>　隼斗です。<br />
                    ニックネームはかっくんです。 <br/>
-                    好きなものは声優です、特に高槻かなこさん。</p>
+                    好きなものは声優です、特に高槻かなこさん。てすと</p>
             </div>
         </div>
     </main>
